docs/apache-airflow-providers-openlineage/1.2.1/_sources/_api/airflow/providers/openlineage/plugins/macros/index.rst.txt
:py:mod:`airflow.providers.openlineage.plugins.macros`
======================================================

.. py:module:: airflow.providers.openlineage.plugins.macros


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.openlineage.plugins.macros.lineage_run_id
   airflow.providers.openlineage.plugins.macros.lineage_parent_id



.. py:function:: lineage_run_id(task_instance)

   Macro function which returns the generated run id for a given task.

   This can be used to forward the run id from a task to a child run so the job hierarchy is preserved.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/macros:openlineage`


.. py:function:: lineage_parent_id(run_id, task_instance)

   Macro function which returns the generated job and run id for a given task.

   This can be used to forward the ids from a task to a child run so the job
   hierarchy is preserved. Child run can create ParentRunFacet from those ids.

   .. seealso::
       For more information on how to use this macro, take a look at the guide:
       :ref:`howto/macros:openlineage`


